Prevent horizontal scrolling

--- a/src/styles/base.sass
+++ b/src/styles/base.sass
@@ -14,6 +14,9 @@ body
   margin: 0
   padding: 0
 
+  overflow-x: hidden
+  overflow-y: scroll
+
   width: 100%
   height: 100%
 
